ingress-rule-prometheus.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kind-cluster-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: prometheus-server.172.18.255.201.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-server
            port:
              number: 9090
